Section actions added

--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
                         <div id="p">placeholderName</div>
                     </div>
                     <div class="right-header">
+                        <a href="#reason-why">
+                            <span class="header-txt">Placeholder</span>
+                        </a>
+                        <a href="about.html">
+                            <span class="header-txt">About us</span>
+                        </a>
                         <a href="">
                             <span class="header-txt">Placeholder</span>
                         </a>
-                        <a href="about.html">About us</a>
-                        <a href="">Lorem</a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <section class="main-wrapper">
+        <section id="main-wrapper">
             <div class="container-body">
                 <div class="row">
                     <div class="container-content-left">
@@ -43,23 +47,68 @@
                         <img src="./img/main-img/img1.jpg" alt="Placeholdder image" id="img1">
                     </div>
                 </div>
+            </div>
+        </section>
+        <div class="marquee-container">
+            <div class="marquee">
+                <h2>Made for the University of San Agustin</h2>
+                <img src="./img/main-img/test1.png" alt="Logo Group" />
+                <h2>Sponsored by RedBull</h2>
+                <h2>Inspired by MrBeast</h2>
+                <h2>Funded by IshowSpeed</h2>
+                <h2>Made for the University of San Agustin</h2>
+                <img src="./img/main-img/test1.png" alt="Logo Group" />
+                <h2>Sponsored by RedBull</h2>
+                <h2>Inspired by MrBeast</h2>
+                <h2>Funded by IshowSpeed</h2>
 
-                <section class="reason-why">
-                    <div class="container-centered">
-                        <span class="reason-head-txt">
-                            <h5>Why do we do this?</h5>
-                        </span>
-                        <div class="reason-sub-txt">
-                            <p>Because idk
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, ex.
-                            </p>
+            </div>
+          </div>
+        <section id="purpose">
+            <div class="container-body">
+                <div class="container-centered">
+                    <span class="reason-head-txt">
+                        <h5>Why do we do this?</h5>
+                    </span>
+                    <div class="reason-sub-txt">
+                        <p>Because idk
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, ex.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="action-1">
+            <div class="wrapper">
+                <div class="container-body">
+                    <div class="action-row-1">
+                        <img src="./img/main-img/html-icon.png" alt="Campaign icon" id="icon">
+                        <h1 class="action-main-txt">Some factual article</h1>
+                        <button>Read more</button>
+                    </div>
+                    <div class="action-row-2">
+                        <div class="box-container">
+                            <div class="box">
+                                <div class="box-content">
+                                    <p>Test</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="video-container">
+                            <div class="video">
+                                <img src="./img/main-img/placeholder-action.jpg" alt="Video about campaign" id="video">
+                            </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
-
         </section>
+        <section id="action-2"></section>
+        <section id="action-3"></section>
+
     </main>
-    <footer></footer>
+    <footer>
+        <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
+    </footer>
 </body>
 </html>
