--- a/index.html
+++ b/index.html
@@ -103,8 +103,56 @@
                 </div>
             </div>
         </section>
-        <section id="action-2"></section>
-        <section id="action-3"></section>
+        <section id="action-2">
+            <div class="wrapper">
+                <div class="container-body">
+                    <div class="action-row-1">
+                        <img src="./img/main-img/css-icon.png" alt="Campaign icon" id="icon">
+                        <h1 class="action-main-txt">Some factual article</h1>
+                        <button>Read more</button>
+                    </div>
+                    <div class="action-row-2">
+                        <div class="box-container">
+                            <div class="box">
+                                <div class="box-content">
+                                    <p>Test</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="video-container">
+                            <div class="video">
+                                <img src="./img/main-img/placeholder-action-2.jpg" alt="Video about campaign" id="video">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="action-3">
+            <div class="wrapper">
+                <div class="container-body">
+                    <div class="action-row-1">
+                        <img src="./img/main-img/html-icon.png" alt="Campaign icon" id="icon">
+                        <h1 class="action-main-txt">Some factual article</h1>
+                        <button>Read more</button>
+                    </div>
+                    <div class="action-row-2">
+                        <div class="box-container">
+                            <div class="box">
+                                <div class="box-content">
+                                    <p>Test</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="video-container">
+                            <div class="video">
+                                <img src="./img/main-img/placeholder-action-3.png" alt="Video about campaign" id="video">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
