Added new section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="header-container">
                     <div class="left-header">
                         <img src="./img/main-img/Sleep.png" alt="Logo for sleep deprivation campaign" id="sleep-img">
-                        <div id="p">placeholderName</div>
+                        <div id="nav-main-txt"><h1>placeholderName</h1></div>
                     </div>
                     <div class="right-header">
                         <a href="#reason-why">
@@ -145,10 +145,28 @@
                             </div>
                         </div>
                         <div class="video-container">
-                            <div class="video">
-                                <img src="./img/main-img/placeholder-action-3.png" alt="Video about campaign" id="video">
+                            <div class="image-container-with-text">
+                                <img src="./img/main-img/placeholder-action-3.png" alt="Description of the image">
+                                <div class="image-text-overlay">
+                                    <h3>Your Title Here</h3>
+                                    <p>Some descriptive text goes here.</p>
+                                    </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="Hikayat">
+            <div class="container-body">
+                <div class="container-centered">
+                    <span class="reason-head-txt">
+                        <h5>Manghikayat</h5>
+                    </span>
+                    <div class="reason-sub-txt">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit unde temporibus, eos ex provident debitis obcaecati quia quae at blanditiis!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -156,6 +174,7 @@
 
     </main>
     <footer>
+
         <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
     </footer>
 </body>
