--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="header-container">
                     <div class="left-header">
                         <img src="./img/main-img/Sleep.png" alt="Logo for sleep deprivation campaign" id="sleep-img">
-                        <div id="nav-main-txt"><h1>placeholderName</h1></div>
+                        <div id="nav-main-txt"><h1>Sleep Deprivation</h1></div>
                     </div>
                     <div class="right-header">
                         <a href="#reason-why">
@@ -90,7 +90,7 @@
                         <div class="box-container">
                             <div class="box">
                                 <div class="box-content">
-                                    <p>Test</p>
+                                    <p>lorem30</p>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                         <div class="box-container">
                             <div class="box">
                                 <div class="box-content">
-                                    <p>Test</p>
+                                    <p>lorem30</p>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                         <div class="box-container">
                             <div class="box">
                                 <div class="box-content">
-                                    <p>Test</p>
+                                    <p>lorem30</p>
                                 </div>
                             </div>
                         </div>
