--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
     <header>
@@ -19,8 +21,8 @@
                         <div id="nav-main-txt"><h1>Sleep Deprivation</h1></div>
                     </div>
                     <div class="right-header">
-                        <a href="#reason-why">
-                            <span class="header-txt">Placeholder</span>
+                        <a href="#purpose">
+                            <span class="header-txt">Purpose</span>
                         </a>
                         <a href="about.html">
                             <span class="header-txt">About us</span>
@@ -174,7 +176,30 @@
 
     </main>
     <footer>
-
+        <div class="wrapper">
+            <div class="container-body">
+                <div class="footer-content">
+                    <div class="footer-left"></div>
+                    <div class="footer-right"></div>
+                </div>
+            </div>
+            <div class="container-body">
+                <ul class="social-links">
+                    <li>
+                        <a href="https://www.instagram.com/yourusername" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                          </a>
+                          
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/yourusername" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                          </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <h1 style="text-align: center; margin-top: 100px;">FOOTER HERE</h1>
         <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
     </footer>
 </body>
