Added fontawesome icons

--- a/index.html
+++ b/index.html
@@ -180,21 +180,32 @@
             <div class="container-body">
                 <div class="footer-content">
                     <div class="footer-left"></div>
+                    <h3>SleepWell</h3>
                     <div class="footer-right"></div>
                 </div>
             </div>
             <div class="container-body">
                 <ul class="social-links">
                     <li>
-                        <a href="https://www.instagram.com/yourusername" target="_blank">
-                            <i class="fab fa-instagram"></i>
+                        <a href="https://www.instagram.com/yourusername" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram" style="color: #ffffff;"></i>
                           </a>
                           
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/yourusername" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
+                        <a href="https://www.facebook.com/yourusername" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook-f" style="color: #ffffff;"></i>
                           </a>
+                    </li>
+                    <li>
+                        <a href="http://https://github.com/Mizikashi1/MMS-Sleep-deprivation" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-github" style="color: #ffffff;"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+                        </a>
                     </li>
                 </ul>
             </div>
