--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sleep Deprivation Campaign</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
                         <button type="button">Placeholder</button>
                     </div>
                     <div class="container-content-right">
-                        <img src="./img/main-img/img1.jpg" alt="Placeholdder image" id="img1">
+                        <div id="container3D"></div>
                     </div>
                 </div>
             </div>
@@ -213,5 +213,6 @@
         <h1 style="text-align: center; margin-top: 100px;">FOOTER HERE</h1>
         <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
     </footer>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
