Updated navbar buttons

--- a/index.html
+++ b/index.html
@@ -21,15 +21,23 @@
                         <div id="nav-main-txt"><h1>Sleep Deprivation</h1></div>
                     </div>
                     <div class="right-header">
-                        <a href="#purpose">
-                            <span class="header-txt">Purpose</span>
-                        </a>
-                        <a href="about.html">
-                            <span class="header-txt">About us</span>
-                        </a>
-                        <a href="">
-                            <span class="header-txt">Placeholder</span>
-                        </a>
+                        <div class="nav-button">
+                            <a href="#purpose">
+                                <i class="fa-solid fa-lightbulb"></i>
+                                <span class="header-txt">Purpose</span>
+                            </a>
+                        </div>
+                        <div class="nav-button">
+                            <a href="about.html">
+                                <i class="fa-solid fa-users"></i>
+                                <span class="header-txt">About us</span>
+                            </a>
+                        </div>
+                        <div class="nav-button">
+                            <a href="">
+                                <span class="header-txt">Placeholder</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -42,8 +50,14 @@
                     <div class="container-content-left">
                         <h1 class="main-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h1>
                         <p class="sub-txt">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, quibusdam!</p>
-                        <button type="button">Placeholder</button>
-                        <button type="button">Placeholder</button>
+                        <div class="button-container">
+                            <div class="button-main-1">
+                                <button type="button">first</button>
+                            </div>
+                            <div class="button-main">
+                                <button type="button">Placeholder</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="container-content-right">
                         <div id="container3D"></div>
@@ -180,7 +194,7 @@
             <div class="container-body">
                 <div class="footer-content">
                     <div class="footer-left"></div>
-                    <h3>SleepWell</h3>
+                    <h3>Raising awareness and driving action on sleep as essential healthcare.</h3>
                     <div class="footer-right"></div>
                 </div>
             </div>
@@ -210,8 +224,9 @@
                 </ul>
             </div>
         </div>
-        <h1 style="text-align: center; margin-top: 100px;">FOOTER HERE</h1>
-        <a href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Freepik - Flaticon</a>
+        <div class="container-body">
+            <h1>FOOTER HERE</h1>
+        </div>
     </footer>
     <script type="module" src="js/main.js"></script>
 </body>
