--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div>
         </div>
         <div class="container-body">
-            <h1>FOOTER HERE</h1>
+            <h1 id="footer-txt">FOOTER HERE</h1>
         </div>
     </footer>
     <script type="module" src="js/main.js"></script>
