fixed social links

--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
                           </a>
                     </li>
                     <li>
-                        <a href="http://https://github.com/Mizikashi1/MMS-Sleep-deprivation" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/Mizikashi1/MMS-Sleep-deprivation" target="_blank" rel="noopener noreferrer">
                             <i class="fa-brands fa-github" style="color: #ffffff;"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="http://https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
                             <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
                         </a>
                     </li>
