Finished general layout

--- a/about.html
+++ b/about.html
@@ -1,13 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us - Sleep Deprivation Campaign</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <h1>Under construction!</h1>
-    <a href="index.html">Go Back</a>
-    
+    <header>
+        <div class="header">
+            <div class="container-body">
+                <div class="header-container">
+                    <div class="left-header">
+                        <a href="./index.html" style="display: flex; align-items: center; text-decoration: none;">
+                            <div style="width: 40px; height: 40px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                                <i class="fa-solid fa-moon" style="color: white; font-size: 20px;"></i>
+                            </div>
+                            <div id="nav-main-txt">
+                                <h1>Sleepless Minds</h1>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="right-header">
+                        <div class="nav-button">
+                            <a href="index.html#main-wrapper">
+                                <i class="fa-solid fa-house">
+                                    <span class="header-txt">Home</span>
+                                </i>
+                            </a>
+                        </div>
+                        <div class="nav-button">
+                            <a href="index.html#purpose">
+                                <i class="fa-solid fa-lightbulb">
+                                    <span class="header-txt">Purpose</span>
+                                </i>
+                            </a>
+                        </div>
+                        <div class="nav-button">
+                            <a href="about.html">
+                                <i class="fa-solid fa-users">
+                                    <span class="header-txt">About us</span>
+                                </i>
+                            </a>
+                        </div>
+                        <div class="nav-button">
+                            <a href="./resources.html">
+                                <i class="fa-solid fa-book">
+                                    <span class="header-txt">Resources</span>
+                                </i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section id="main-wrapper">
+            <div class="container-body">
+                <div class="row">
+                    <div id="container3D"></div>
+                </div>
+            </div>
+        </section>
+        <section id="about-us">
+            <div class="container-body">
+                <div class="container-centered">
+                    <span class="reason-head-txt">
+                        <h5>About Our Campaign</h5>
+                    </span>
+                    <div class="reason-sub-txt">
+                        <p>
+                            Welcome to the Sleepless Minds! We are dedicated to raising awareness about the profound impact of sleep on overall health and well-being. Our mission is to educate individuals and communities about the importance of quality sleep, its effects on physical and mental health, and practical strategies for improving sleep habits.
+                        </p>
+                        <p>
+                            Through informative content, engaging events, and community outreach, we aim to empower everyone to prioritize sleep as a fundamental pillar of a healthy lifestyle. Join us in our journey to promote better sleep for a better life!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="wrapper">
+            <div class="container-body-1">
+                <div class="footer-content">
+                    <div class="footer-left"></div>
+                    <h3>Raising awareness and driving action on sleep as essential healthcare.</h3>
+                    <div class="footer-right"></div>
+                </div>
+            </div>
+            <div class="container-body">
+                <ul class="social-links">
+                    <li>
+                        <a href="https://www.instagram.com/yourusername" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram" style="color: #ffffff;"></i>
+                          </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/yourusername" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook-f" style="color: #ffffff;"></i>
+                          </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Mizikashi1/MMS-Sleep-deprivation" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-github" style="color: #ffffff;"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <script type="module" src="js/main2.js"></script>
 </body>
 </html>
