--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sleepless Minds</title>
     <link rel="shortcut icon" href="./img/moon-regular.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -59,6 +60,8 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <h1 style="margin-top: 200px; text-align: center;">Books and stuff here</h1>
+    </main>
 </body>
 </html>
