--- a/resources.html
+++ b/resources.html
@@ -61,7 +61,45 @@
         </div>
     </header>
     <main>
-        <h1 style="margin-top: 200px; text-align: center;">Books and stuff here</h1>
+        <h1 style="margin-top: 200px; text-align: center; height: 90vh;">Books and stuff here</h1>
     </main>
+
+    <footer>
+        <div class="wrapper">
+            <div class="container-body-1">
+                <div class="footer-content">
+                    <h3>Raising awareness and driving action on sleep as essential healthcare.</h3>
+                </div>
+            </div>
+            <div class="container-body">
+                <ul class="social-links">
+                    <li>
+                        <a href="https://www.instagram.com/sleepfoundation/" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram" style="color: #ffffff;"></i>
+                          </a>
+                          
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/sanagustiniloilo" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook-f" style="color: #ffffff;"></i>
+                          </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Mizikashi1/MMS-Sleep-deprivation" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-github" style="color: #ffffff;"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/@NatlSleepFoundation/videos" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 SleeplessMinds. University of San Agustin.</p>
+        </div>
+    </footer>
 </body>
 </html>
