--- a/about.html
+++ b/about.html
@@ -91,20 +91,19 @@
         <div class="wrapper">
             <div class="container-body-1">
                 <div class="footer-content">
-                    <div class="footer-left"></div>
                     <h3>Raising awareness and driving action on sleep as essential healthcare.</h3>
-                    <div class="footer-right"></div>
                 </div>
             </div>
             <div class="container-body">
                 <ul class="social-links">
                     <li>
-                        <a href="https://www.instagram.com/yourusername" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.instagram.com/sleepfoundation/" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-instagram" style="color: #ffffff;"></i>
                           </a>
+                          
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/yourusername" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.facebook.com/sanagustiniloilo" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook-f" style="color: #ffffff;"></i>
                           </a>
                     </li>
@@ -114,12 +113,15 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.youtube.com/@NatlSleepFoundation/videos" target="_blank" rel="noopener noreferrer">
                             <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
                         </a>
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 SleeplessMinds. University of San Agustin.</p>
         </div>
     </footer>
     <script type="module" src="js/main2.js"></script>
