--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Sleep Deprivation Campaign. University of San Agustin.</p>
+            <p>&copy; 2025 SleeplessMinds. University of San Agustin.</p>
         </div>
     </footer>
     <script type="module" src="js/main.js"></script>
