--- a/about.html
+++ b/about.html
@@ -65,7 +65,12 @@
         <section id="main-wrapper">
             <div class="container-body">
                 <div class="row">
-                    <div id="container3D"></div>
+                    <div class="button-container interview" style="z-index: 50; left: -9999px;">
+                        <a href="#about-us">
+                            <button type="button" class="btn-primary">See More</button>
+                        </a>
+                    </div>
+                    <div id="container3D" style="height: 40vh;"></div>
                 </div>
             </div>
         </section>
