--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="button-container interview" style="z-index: 50; left: -9999px;">
                         <a href="#about-us">
-                            <button type="button" class="btn-primary">See More</button>
+                            <button type="button" class="button-primary">See More</button>
                         </a>
                     </div>
                     <div id="container3D" style="height: 40vh;"></div>
