Stats section added

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                         <p class="sub-txt">Join our campaign to raise awareness about the critical importance of quality sleep and its impact on physical and mental wellbeing. </p>
                         <div class="button-container">
                             <a href="#purpose">
-                                <button type="button" class="btn-primary">Learn More</button>
+                                <button type="button" class="button-primary">Learn More</button>
                             </a>
                             <a href="https://www.thensf.org/national-sleep-advocacy-roundtable/" target="_blank" rel="noopener noreferrer">
-                                <button type="button" class="btn-secondary">Get Involved</button>
+                                <button type="button" class="button-secondary">Get Involved</button>
                             </a>
                                 
                         </div>
@@ -135,6 +135,42 @@
             </div>
         </section>
 
+        <section class="stats-section">
+            <div class="container-body">
+                <div class="container-centered">
+                    <span class="reason-head-txt">
+                        <h5 style="color: white;">Sleep by the Numbers</h5>
+                    </span>
+                    <div class="stats-container">
+                        <a href="https://www.mili.eu/ph/insights/filipinos-most-sleepless-people-in-asia-4th-in-the-world----study" target="_blank" rel="noopener noreferrer">
+                            <div class="stat-card">
+                                <span class="stat-number">56%</span>
+                                <p class="stat-text">of FIlipinos don't get enough sleep</p>
+                            </div>
+                        </a>
+                        <a href="https://www.health.harvard.edu/topics/sleep#sleep0" target="_blank" rel="noopener noreferrer">
+                            <div class="stat-card">
+                                <span class="stat-number">7</span>
+                                <p class="stat-text">hours is the recommended sleep for adults</p>
+                            </div>
+                        </a>
+                        <a href="https://www.who.int/docs/default-source/wpro---documents/countries/philippines/reports/investment-case-report-mental-health-philippines-2021.pdf?sfvrsn=d0f436e7_9#:~:text=to%200.4%%20of%20its%20gross%20domestic%20product,that%20multisectoral%2C%20whole%2D%20of%2Dsociety%20engagement%20is%20needed." target="_blank" rel="noopener noreferrer">
+                            <div class="stat-card">
+                                <span class="stat-number">₱66,200,000,000</span>
+                                <p class="stat-text">billion lost annually due to productivity loss</p>
+                            </div>
+                        </a>
+                        <a href="https://www.gmanetwork.com/news/lifestyle/healthandwellness/670589/sleep-deprivation-could-be-as-risky-for-drivers-as-alcohol/story/#:~:text=%E2%80%9CThe%20odds%20of%20being%20responsible%20for%20a,five%20hours%20to%20less%20than%204%20hours.&text=The%20study%20also%20found%20that%20drivers%20who,in%20their%20risk%20of%20causing%20a%20crash." target="_blank" rel="noopener noreferrer">
+                            <div class="stat-card">
+                                <span class="stat-number">30%</span>
+                                <p class="stat-text">increase in accident risk when sleep deprived</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="action-section">
             <div class="container-body-1">
                 <div class="action-card">
@@ -143,7 +179,7 @@
                     </div>
                     <h2 class="action-title">Mental Health Impact</h2>
                     <a href="https://www.sleepfoundation.org/mental-health" target="_blank" rel="noopener noreferrer">
-                        <button class="btn-secondary">Read More</button>
+                        <button class="button-secondary">Read More</button>
                     </a>
                     <div class="action-content">
                         <div class="action-text">
@@ -157,7 +193,7 @@
             </div>
         </section>
 
-        <section class="action-section">
+        <section class="action-section mid">
             <div class="container-body-1">
                 <div class="action-card">
                     <div class="action-icon">
@@ -165,7 +201,7 @@
                     </div>
                     <h2 class="action-title">Physical Health Effects</h2>
                     <a href="https://www.sleepfoundation.org/physical-health" target="_blank" rel="noopener noreferrer">
-                        <button class="btn-secondary">Read More</button>
+                        <button class="button-secondary">Read More</button>
                     </a>
                     <div class="action-content">
                         <div class="action-text">
@@ -187,7 +223,7 @@
                     </div>
                     <h2 class="action-title">Sleep Solutions</h2>
                     <a href="https://www.medicalnewstoday.com/articles/307334#treatment" target="_blank" rel="noopener noreferrer">
-                        <button class="btn-secondary">Read More</button>
+                        <button class="button-secondary">Read More</button>
                     </a>
                     <div class="action-content">
                         <div class="action-text">
@@ -220,10 +256,10 @@
                         </p>
                         <div class="button-container">
                             <a href="#purpose">
-                                <button type="button" class="btn-primary">Learn More</button>
+                                <button type="button" class="button-primary">Learn More</button>
                             </a>
                             <a href="https://www.thensf.org/national-sleep-advocacy-roundtable/" target="_blank" rel="noopener noreferrer">
-                                <button type="button" class="btn-secondary">Get Involved</button>
+                                <button type="button" class="button-secondary">Get Involved</button>
                             </a>
                                 
                         </div>
@@ -238,7 +274,7 @@
                 Your thoughts help us improve! If you've explored our site or learned something new, please take a moment to share your feedback. It only takes a minute.
                 <div class="button-container">
                     <a href="#purpose">
-                        <button type="button" class="btn-primary">Feedback Form</button>
+                        <button type="button" class="button-primary">Feedback Form</button>
                     </a>
                 </div>
             </div>
